--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
             </section> 
             <hr>
             <section id="section3">
-                <h3>3. osa: Kaart</h3>
+         
+				<h3>3. osa: Kaart</h3>
                 <div id="map"></div>
             </section>
         </main>
         <script type='text/javascript' src="script.js"></script>
-        <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=[AqLLRE37SJGqIxXEYxezPUa6fF2oCzl3cvG4n05FtFIVBrotBYxchpMYYpwuxBak]' async defer></script>
+        <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=[AqLLRE37SJGqIxXEYxezPUa6fF2oCzl3cvG4n05FtFIVBrotBYxchpMYYpwuxBak]' async defer></script>
     </body>
 </html>
